<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>chemistry-lab</groupId>
  <artifactId>chemistry-lab</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>16</source>
          <target>16</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>commons-io</groupId>
  		<artifactId>commons-io</artifactId>
  		<version>2.7</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-math3</artifactId>
  		<version>3.6.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-collections4</artifactId>
  		<version>4.4</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-lang</groupId>
  		<artifactId>commons-lang</artifactId>
  		<version>2.6</version>
  	</dependency>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.8.6</version>
  	</dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
  		<artifactId>guava</artifactId>
  		<version>30.0-jre</version>
  	</dependency>
  	<dependency>
  		<groupId>com.carrotsearch</groupId>
  		<artifactId>java-sizeof</artifactId>
  		<version>0.0.5</version>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl</artifactId>
  		<version>3.2.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-glfw</artifactId>
  		<version>3.2.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-opengl</artifactId>
  		<version>3.2.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-stb</artifactId>
  		<version>3.2.2</version>
  	</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-openal</artifactId>
			<version>3.2.2</version>
		</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl</artifactId>
  		<version>3.2.2</version>
  		<classifier>natives-windows</classifier>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-glfw</artifactId>
  		<version>3.2.2</version>
  		<classifier>natives-windows</classifier>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-opengl</artifactId>
  		<version>3.2.2</version>
  		<classifier>natives-windows</classifier>
  	</dependency>
  	<dependency>
  		<groupId>org.lwjgl</groupId>
  		<artifactId>lwjgl-stb</artifactId>
  		<version>3.2.2</version>
  		<classifier>natives-windows</classifier>
  	</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-openal</artifactId>
			<version>3.2.2</version>
  		<classifier>natives-windows</classifier>
		</dependency>
  	<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.6.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.6.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.typesafe</groupId>
			<artifactId>config</artifactId>
			<version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jopt-simple</groupId>
			<artifactId>jopt-simple</artifactId>
			<version>5.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.0.3</version>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.1.65.Final</version>
		</dependency>
		<dependency>
			<groupId>com.github.oshi</groupId>
			<artifactId>oshi-core</artifactId>
			<version>5.7.5</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging-api</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.14.1</version>
		</dependency>
	  <dependency>
		  <groupId>org.apache.logging.log4j</groupId>
		  <artifactId>log4j-slf4j-impl</artifactId>
		  <version>2.14.1</version>
	  </dependency>
  </dependencies>
</project>